# modeling_auroral_nuke

./: README.md
notes/: getstarted.md  note1.txt  note2  troubleshoot.txt
projects/cylinder/: action.cc  action.hh  construction.cc  construction.hh  generator.cc  generator.hh  physics.cc  physics.hh  testsim.cc
projects/testsim/: CMakeLists.txt  construction.cc  construction.hh  generator.cc  testsim.cc
